...
        }}
      />
      <Tabs.Screen
        name="calendar"
        options={{
          tabBarIcon: CalendarTabIcon,
          tabBarButtonTestID: "tab-calendar",
          tabBarAccessibilityLabel: "tab-calendar",
        }}
      />
    </Tabs>
  );
}
...
