...
      "https://www.concordia.ca/content/concordia/en/maps/buildings/gs/_jcr_content/content-main/grid_container_307846512/grid-container-parsys/box_427340212/box-parsys/image.img.jpg/1753390286932.jpg",
  },
  {
    campus: "SGW",
    code: "H",
    shortName: "H Building",
    longName: "Henry F. Hall Building",
    address: "1455 DeMaisonneuve W",
    latitude: 45.497092,
    longitude: -73.5788,
    description:
      "Completed in 1966, the Henry F. Hall Building is a prominent academic and social hub on the Sir George Williams Campus. Its cube-like form and exterior of pre-fabricated, stressed concrete reflect the Brutalist architectural style, a movement often associated with French architect Le Corbusier. \n \nInside, the building brings together many academic departments — particularly in the social 
    photoLink:
...
      "https://www.concordia.ca/content/concordia/en/maps/buildings/sh/_jcr_content/content-main/grid_container_307846512/grid-container-parsys/box_427340212/box-parsys/image.img.jpg/1750774494391.jpg",
  },
  {
    campus: "LOY",
    code: "SP",
    shortName: "SP Building",
    longName: "Richard J. Renaud Science Complex",
    address: "7141 Sherbrooke W",
    latitude: 45.457881,
    longitude: -73.641565,
    description:
      "Opened in 2003, the Richard J. Renaud Science Complex changed the face of Concordia's west-end campus. This state-of-the-art teaching and research facility includes teaching facilities, offices and laboratories for various science departments. \n \nThe avant-garde design promotes interdisciplinarity and innovation in one of the top university sciences facilities in Canada. The award-winning
    photoLink:
...
