# US-1.5a: Show additional information for each building (pop-up information)
# Tap building --> pop-up shows building name, and building details

appId: host.exp.Exponent

---
- runFlow:
    file: _launch-expo-go.yaml
- assertVisible: "Where to?"

- assertVisible:
    id: "campus-toggle-sgw"

- runFlow:
    commands:
      - tapOn:
          point: "45%,50%"

- extendedWaitUntil:
    visible: "Henry F. Hall Building"
    timeout: 10000

- extendedWaitUntil:
    visible:
      id: "building-info-close"
    timeout: 3000

- tapOn:
    id: "building-info-close"

- assertNotVisible: "Henry F. Hall Building"
